Fix: 우승자 찾는 함수 수정